@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class GSM {
    name
    vatNumber
    phoneNumber
    email
}

class TDLEntry {
    title
    taskDescription
    degree of urgency
    approx. duration
    associatedGreenSpace
}

class GreenSpace {
    name
    type
    area
}

class GreenSpaceRepository {
    GreenSpaces
}

class ToDoList {
    entries
    gsm
}

class ToDoListRepository {
    toDoLists
}

'class User {
'    name
'    email
'    password
'}

GSM "1" -- "*" TDLEntry: adds >
TDLEntry "1" -- "1" GreenSpace: associated with >
GreenSpace "1" -- "1" GreenSpaceRepository: stored in >
GSM "1" - "1" GreenSpace: manages >
GSM "1" -- "1" ToDoList: uses >
TDLEntry "1" - "1" ToDoList: is shown in >
ToDoList "1" -- "1" ToDoListRepository: stored in >

@enduml